# src/models/AuthProvider.ts
@@ -1,0 +1,6 @@
+
+export default {
+    GOOGLE: 'google',
+    MICROSOFT: 'microsoft',
+    ANONYMOUS: 'anonymous'
+}
